--- a/index.html
+++ b/index.html
@@ -3,27 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>User Registration Form</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <form id="registration-form">
-        <div>
-            <label for="username">Username:</label>
-            <input type="text" id="username" required>
-        </div>
+        <label for="username">Username:</label>
+        <input type="text" id="username" required>
 
-        <div>
-            <label for="email">Email:</label>
-            <input type="email" id="email" required>
-        </div>
+        <label for="email">Email:</label>
+        <input type="email" id="email" required>
 
-        <div>
-            <label for="password">Password:</label>
-            <input type="password" id="password" required>
-        </div>
+        <label for="password">Password:</label>
+        <input type="password" id="password" required>
 
         <button type="submit">Register</button>
-        
         <div id="form-feedback"></div>
     </form>
     <script src="script.js"></script>
